# CBasic

./: .gitignore  CMakeLists.txt
CPrimerPlus/part10/: Array2d.c  DayMon.c  PtrOps.c  Rain.c  SumArr1.c  SumArr2.c  TestArrInit.c  Zippo1.c  Zippo2.c
CPrimerPlus/part2/: Fathm_ft.c  First.c  Practice123.c  Practice4.c  Practice5.c  Practice6.c  Practice7.c  Practice8.c  Two_func.c
CPrimerPlus/part3/: Altnames.c  BadCount.c  Bases.c  Charcode.c  Escape.c  Floaterr.c  Platinum.c  Practice.c  Practice1.c  Practice2.c  Print1.c  Print2.c  Showf_pt.c  Toobig.c  Typesize.c
CPrimerPlus/part4/: Defines.c  Flag.c  Floats.c  Input.c  Longstrg.c  Pizza.c  Practice.c  Practice23.c  Practice59.c  Praise1.c  Praise2.c  Prntval.c  ProgramPractice12.c  ProgramPractice34.c  ProgramPractice56.c  ProgramPractice7.c  Skip2.c  Stringf.c  TalkBack.c  UsePrintf.c  Varwid.c  Width.c
CPrimerPlus/part5/: Addemup.c  Convert.c  Divide.c  Pound.c  Shoes2.c  Sizeof.c
CPrimerPlus/part6/: Boolean.c  Cmpflt.c  Power.c  Summing.c  Sweetie.c  TrueAndFalse.c
CPrimerPlus/part7/: WordCnt.c
CPrimerPlus/part8/: Checking.c  Echo.c  Guess.c  Input.c  Menuette.c  ShowChar.c
CPrimerPlus/part9/: AlterTest.c  Binary.c  CuiInfo.c  CuiInfo.h  Factor.c  GetMaxLikeJava.c  ProgramPractice10and11.c  ProgramPractice124.c  ProgramPractice567.c  ProgramPractice89.c  Recur.c  Swap1.c  Swap2.c  Swap3.c
TheCProgrammingLanguage/part1/: Chap1.10.c  Chap1.2.1.c  Chap1.2.2.c  Chap1.3.c  Chap1.5.1.1.c  Chap1.5.1.c  Chap1.5.3.2.c  Chap1.5.3.3.c  Chap1.5.4.1.c  Chap1.7.1.c  Chap1.8.c  Chap1.9.1.c  Chap1.9.2.c
TheCProgrammingLanguage/part2/: Chap2.1.c  Chap2.10.c  Chap2.11.c  Chap2.3.c  Chap2.5.c  Chap2.6.c  Chap2.c
TheCProgrammingLanguage/part3/: Chap3.1.c  Chap3.3.c  Chap3.4.c  Chap3.5.c
TheCProgrammingLanguage/part4/: Chap4.1.c  README.md
part1/: Chap1.1.c  Chap1.10.c  Chap1.2.1.c  Chap1.2.c  Chap1.3.1.c  Chap1.4.c  Chap1.5.2.c  Chap1.5.3.1.c  Chap1.5.3.c  Chap1.5.4.c  Chap1.5.c  Chap1.6.c  Chap1.7.c  Chap1.9.3.c  Chap1.9.4.c  Chap1.9.c
part2/: Chap2.10.c  Chap2.12.c  Chap2.2.c  Chap2.3.c  Chap2.4.c  Chap2.7.c  Chap2.8.c  Chap2.9.c  README.md
part3/: Chap3.2.c  Chap3.5.c  Chap3.6.c  Chap3.7.c  Chap3.8.c  README.md
zd/: 001.c  002.c  003.c  004.c  005.c  006.c  007.c  008.c  README.md
