cmake_minimum_required(VERSION 3.17)
project(CBasic C)

set(CMAKE_C_STANDARD 99)

add_executable(CBasic main.c)
add_executable(CBasic11 part1/Chap1.1.c)
add_executable(CBasic12 part1/Chap1.2.c)
add_executable(CBasic121 part1/Chap1.2.1.c)
add_executable(CBasic122 part1/Chap1.2.2.c)
add_executable(CBasic13 part1/Chap1.3.c)
add_executable(CBasic131 part1/Chap1.3.1.c)
add_executable(CBasic14 part1/Chap1.4.c)
add_executable(CBasic151 part1/Chap1.5.1.c)
add_executable(CBasic1511 part1/Chap1.5.1.1.c)
add_executable(CBasic152 part1/Chap1.5.2.c)
add_executable(CBasic153 part1/Chap1.5.3.c)
add_executable(CBasic1531 part1/Chap1.5.3.1.c)
add_executable(CBasic1532 part1/Chap1.5.3.2.c)
add_executable(CBasic1533 part1/Chap1.5.3.3.c)
add_executable(CBasic154 part1/Chap1.5.4.c)
add_executable(CBasic1541 part1/Chap1.5.4.1.c)
add_executable(CBasic156 part1/Chap1.6.c)
add_executable(CBasic157 part1/Chap1.7.c)
add_executable(CBasic1571 part1/Chap1.7.1.c)
add_executable(CBasic19 part1/Chap1.9.c)
add_executable(CBasic191 part1/Chap1.9.1.c)
add_executable(CBasic192 part1/Chap1.9.2.c)
add_executable(CBasic193 part1/Chap1.9.3.c)
add_executable(CBasic194 part1/Chap1.9.4.c)
add_executable(CBasic110 part1/Chap1.10.c)

add_executable(CBasic22 part2/Chap2.2.c)
add_executable(CBasic23 part2/Chap2.3.c)
add_executable(CBasic25 part2/Chap2.5.c)
add_executable(CBasic27 part2/Chap2.7.c)
add_executable(CBasic28 part2/Chap2.8.c)
add_executable(CBasic29 part2/Chap2.9.c)
add_executable(CBasic210 part2/Chap2.10.c)

add_executable(CBasic33 part3/Chap3.3.c)
add_executable(CBasic34 part3/Chap3.4.c)
add_executable(CBasic35 part3/Chap3.5.c)
add_executable(CBasic36 part3/Chap3.6.c)
add_executable(CBasic37 part3/Chap3.7.c)
add_executable(CBasic38 part3/Chap3.8.c)





