cmake_minimum_required(VERSION 3.17)
project(CBasic C)

set(CMAKE_C_STANDARD 99)

add_executable(CBasic main.c)
add_executable(CBasic11 TheCProgrammingLanguage/part1/Chap1.1.c)
add_executable(CBasic12 TheCProgrammingLanguage/part1/Chap1.2.c)
add_executable(CBasic121 TheCProgrammingLanguage/part1/Chap1.2.1.c)
add_executable(CBasic122 TheCProgrammingLanguage/part1/Chap1.2.2.c)
add_executable(CBasic13 TheCProgrammingLanguage/part1/Chap1.3.c)
add_executable(CBasic131 TheCProgrammingLanguage/part1/Chap1.3.1.c)
add_executable(CBasic14 TheCProgrammingLanguage/part1/Chap1.4.c)
add_executable(CBasic151 TheCProgrammingLanguage/part1/Chap1.5.1.c)
add_executable(CBasic1511 TheCProgrammingLanguage/part1/Chap1.5.1.1.c)
add_executable(CBasic152 TheCProgrammingLanguage/part1/Chap1.5.2.c)
add_executable(CBasic153 TheCProgrammingLanguage/part1/Chap1.5.3.c)
add_executable(CBasic1531 TheCProgrammingLanguage/part1/Chap1.5.3.1.c)
add_executable(CBasic1532 TheCProgrammingLanguage/part1/Chap1.5.3.2.c)
add_executable(CBasic1533 TheCProgrammingLanguage/part1/Chap1.5.3.3.c)
add_executable(CBasic154 TheCProgrammingLanguage/part1/Chap1.5.4.c)
add_executable(CBasic1541 TheCProgrammingLanguage/part1/Chap1.5.4.1.c)
add_executable(CBasic156 TheCProgrammingLanguage/part1/Chap1.6.c)
add_executable(CBasic157 TheCProgrammingLanguage/part1/Chap1.7.c)
add_executable(CBasic1571 TheCProgrammingLanguage/part1/Chap1.7.1.c)
add_executable(CBasic19 TheCProgrammingLanguage/part1/Chap1.9.c)
add_executable(CBasic191 TheCProgrammingLanguage/part1/Chap1.9.1.c)
add_executable(CBasic192 TheCProgrammingLanguage/part1/Chap1.9.2.c)
add_executable(CBasic193 TheCProgrammingLanguage/part1/Chap1.9.3.c)
add_executable(CBasic194 TheCProgrammingLanguage/part1/Chap1.9.4.c)
add_executable(CBasic110 TheCProgrammingLanguage/part1/Chap1.10.c)

add_executable(CBasic22 TheCProgrammingLanguage/part2/Chap2.2.c)
add_executable(CBasic23 TheCProgrammingLanguage/part2/Chap2.3.c)
add_executable(CBasic25 TheCProgrammingLanguage/part2/Chap2.5.c)
add_executable(CBasic27 TheCProgrammingLanguage/part2/Chap2.7.c)
add_executable(CBasic28 TheCProgrammingLanguage/part2/Chap2.8.c)
add_executable(CBasic29 TheCProgrammingLanguage/part2/Chap2.9.c)
add_executable(CBasic210 TheCProgrammingLanguage/part2/Chap2.10.c)

add_executable(CBasic33 TheCProgrammingLanguage/part3/Chap3.3.c)
add_executable(CBasic34 TheCProgrammingLanguage/part3/Chap3.4.c)
add_executable(CBasic35 TheCProgrammingLanguage/part3/Chap3.5.c)
add_executable(CBasic36 TheCProgrammingLanguage/part3/Chap3.6.c)
add_executable(CBasic37 TheCProgrammingLanguage/part3/Chap3.7.c)
add_executable(CBasic38 TheCProgrammingLanguage/part3/Chap3.8.c)

add_executable(CBasic41 TheCProgrammingLanguage/part4/Chap4.1.c)


add_executable(CPrimerPlus2 CPrimerPlus/part2/First.c)
add_executable(CPrimerPlus21 CPrimerPlus/part2/Fathm_ft.c)
add_executable(CPrimerPlus22 CPrimerPlus/part2/Two_func.c)
add_executable(CPrimerPlus23 CPrimerPlus/part2/Practice123.c)
add_executable(CPrimerPlus24 CPrimerPlus/part2/Practice4.c)
add_executable(CPrimerPlus25 CPrimerPlus/part2/Practice5.c)
add_executable(CPrimerPlus26 CPrimerPlus/part2/Practice6.c)
add_executable(CPrimerPlus27 CPrimerPlus/part2/Practice7.c)
add_executable(CPrimerPlus28 CPrimerPlus/part2/Practice8.c)

add_executable(CPrimerPlus31 CPrimerPlus/part3/Platinum.c)
add_executable(CPrimerPlus32 CPrimerPlus/part3/Print1.c)
add_executable(CPrimerPlus33 CPrimerPlus/part3/Bases.c)
add_executable(CPrimerPlus34 CPrimerPlus/part3/Toobig.c)
add_executable(CPrimerPlus35 CPrimerPlus/part3/Print2.c)
add_executable(CPrimerPlus36 CPrimerPlus/part3/Charcode.c)
add_executable(CPrimerPlus37 CPrimerPlus/part3/Altnames.c)
add_executable(CPrimerPlus38 CPrimerPlus/part3/Showf_pt.c)
add_executable(CPrimerPlus39 CPrimerPlus/part3/Floaterr.c)
add_executable(CPrimerPlus310 CPrimerPlus/part3/Typesize.c)
add_executable(CPrimerPlus311 CPrimerPlus/part3/BadCount.c)
add_executable(CPrimerPlus312 CPrimerPlus/part3/Escape.c)
add_executable(CPrimerPlus313 CPrimerPlus/part3/Practice1.c)
add_executable(CPrimerPlus314 CPrimerPlus/part3/Practice2.c)

add_executable(CPrimerPlus40 CPrimerPlus/part4/TalkBack.c)
add_executable(CPrimerPlus41 CPrimerPlus/part4/Praise1.c)
add_executable(CPrimerPlus42 CPrimerPlus/part4/Praise2.c)
add_executable(CPrimerPlus43 CPrimerPlus/part4/Pizza.c)
add_executable(CPrimerPlus44 CPrimerPlus/part4/Defines.c)
add_executable(CPrimerPlus45 CPrimerPlus/part4/UsePrintf.c)
add_executable(CPrimerPlus46 CPrimerPlus/part4/Width.c)
add_executable(CPrimerPlus47 CPrimerPlus/part4/Floats.c)
add_executable(CPrimerPlus48 CPrimerPlus/part4/Flag.c)
add_executable(CPrimerPlus49 CPrimerPlus/part4/Stringf.c)
add_executable(CPrimerPlus410 CPrimerPlus/part4/Prntval.c)
add_executable(CPrimerPlus411 CPrimerPlus/part4/Longstrg.c)
add_executable(CPrimerPlus412 CPrimerPlus/part4/Input.c)
add_executable(CPrimerPlus413 CPrimerPlus/part4/Varwid.c)
add_executable(CPrimerPlus414 CPrimerPlus/part4/Skip2.c)
add_executable(CPrimerPlus415 CPrimerPlus/part4/Practice23.c)
add_executable(CPrimerPlus416 CPrimerPlus/part4/Practice59.c)
add_executable(CPrimerPlus417 CPrimerPlus/part4/ProgramPractice12.c)
add_executable(CPrimerPlus418 CPrimerPlus/part4/ProgramPractice34.c)
add_executable(CPrimerPlus419 CPrimerPlus/part4/ProgramPractice56.c)
add_executable(CPrimerPlus420 CPrimerPlus/part4/ProgramPractice7.c)

add_executable(CPrimerPlus50 CPrimerPlus/part5/Shoes2.c)
add_executable(CPrimerPlus51 CPrimerPlus/part5/Divide.c)
add_executable(CPrimerPlus52 CPrimerPlus/part5/Sizeof.c)
add_executable(CPrimerPlus53 CPrimerPlus/part5/Addemup.c)
add_executable(CPrimerPlus54 CPrimerPlus/part5/Convert.c)
add_executable(CPrimerPlus55 CPrimerPlus/part5/Pound.c)

add_executable(CPrimerPlus60 CPrimerPlus/part6/Summing.c)
add_executable(CPrimerPlus61 CPrimerPlus/part6/Cmpflt.c)
add_executable(CPrimerPlus62 CPrimerPlus/part6/TrueAndFalse.c)
add_executable(CPrimerPlus63 CPrimerPlus/part6/Boolean.c)
add_executable(CPrimerPlus64 CPrimerPlus/part6/Sweetie.c)
add_executable(CPrimerPlus65 CPrimerPlus/part6/Power.c)

add_executable(CPrimerPlus70 CPrimerPlus/part7/WordCnt.c)

add_executable(CPrimerPlus80 CPrimerPlus/part8/Echo.c)
add_executable(CPrimerPlus81 CPrimerPlus/part8/Guess.c)
add_executable(CPrimerPlus82 CPrimerPlus/part8/ShowChar.c)
add_executable(CPrimerPlus83 CPrimerPlus/part8/Input.c)
add_executable(CPrimerPlus84 CPrimerPlus/part8/Checking.c)
add_executable(CPrimerPlus85 CPrimerPlus/part8/Menuette.c)


